TicketMaster/TicketMaster/static/css/main.css
html {
    -webkit-font-smoothing: antialiased;
    height:100%;
}

body {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 16px;
    height: 100%;
    overflow-y: inherit;
    
    background: url(../img/background.jpeg) no-repeat center center fixed;
    -webkit-background-size: auto;
    -moz-background-size: auto;
    -o-background-size: auto;
    background-size: cover;
}

hr {
    border: 0;
    border-top: 2px solid white;
}

a {
    text-decoration: underline;
}

.login-input {
    max-width: 300px;
}

#login-banner {
    background: rgba(0, 0, 0, 0.65);
    -webkit-backdrop-filter: blur(3px);
    backdrop-filter: blur(3px);
}

#loginButton {
    background-color: #32CD32;
    margin: auto;
    margin-top: 20px;
    max-width: 240px;
}


.alert-danger {
    background-color: #FF3333;
    color: white;
    border: none;
    font-size: 80%;
}

/* enable absolute positioning */

.inner-addon {
    position: relative;
}


/* style icon */

.inner-addon .glyphicon {
    position: absolute;
    padding: 10px;
    pointer-events: none;
    color: lightgrey;
}


/* align icon */

.left-addon .glyphicon {
    left: 0px;
}

.right-addon .glyphicon {
    right: 0px;
}


/* add padding  */

td {
  border: 1px solid black;
  width: 50px;
  display:block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

